--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^6.1.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
@@ -23,7 +24,8 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "react-wrap-balancer": "^1.1.1",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.45"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
